examples/openshift/routes/templates/openshift-sample-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: venafi-route-coffee
  namespace: sample-apps
  annotations:
    cert-manager.io/issuer-name: vtpp-enhanced-clusterissuer # This is the only required annotation
    cert-manager.io/issuer-group: jetstack.io # Optional, defaults to cert-manager.io
    cert-manager.io/issuer-kind: VenafiClusterIssuer # Optional, defaults to Issuer, could be ClusterIssuer or an External Issuer
    #cert-manager.io/duration: 1h # Optional, defaults to 90 days
    cert-manager.io/renew-before: 30m # Optional, defaults to 1/3 of total certificate duration.
    cert-manager.io/common-name: "coffee.oc.${JS_JETSTACKER_DOMAIN_NAME}" # Optional, no default.
    cert-manager.io/alt-names: "coffee.oc.${JS_JETSTACKER_DOMAIN_NAME}" # Optional, no default
    #cert-manager.io/ip-sans: "10.20.30.40,192.168.192.168" # Optional, no default
    #cert-manager.io/uri-sans: "spiffe://trustdomain/workload" # Optional, no default
spec:
  host: coffee.oc.${JS_JETSTACKER_DOMAIN_NAME}
  path: "/coffee" 
  to:
    kind: Service
    name: coffee-svc
---
